# feat-py

./: .spec.toml  README.md  feat.py  pyproject.toml
docs/: FEAT_PATTERNS.md  QUICK_START.md  USING_FEAT.md
docs/examples/: FEATURES_COLORS.md  FEATURES_STRINGS.md  FEATURES_TOKENS.md  cage_FEATURES_CORE.md  cage_example.feat.toml  rolo_FEATURES_PRELUDE.md  rsb_FEATURES_OBJECT_legacy.md  rsb_FEATURES_STREAMS.stub.md  rsb_core_FEATURES_BASH.md  rsb_example.feat.toml  rsb_porty_FEATURES_COLORS.md
docs/procs/: TASKS.txt
