[project]
name = "feat"
version = "2.0.0"
description = "Cross-language feature documentation tool"
authors = [
    {name = "snekfx", email = "noreply@snekfx.dev"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["documentation", "features", "rust", "python", "api-surface"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # TOML parsing for Python <3.11
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
featpy = "feat:main"

[project.urls]
Homepage = "https://github.com/snekfx/feat-py"
Repository = "https://github.com/snekfx/feat-py"
Issues = "https://github.com/snekfx/feat-py/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["feat"]
